fix blog post cards tag wrapping

--- a/src/components/blog-post-card/blogPostCard.scss
+++ b/src/components/blog-post-card/blogPostCard.scss
@@ -23,7 +23,7 @@
 
   .b-blog-post-card-tags-container {
     display: flex;
-    gap: 30px;
+    gap: 10px 30px;
     flex-wrap: wrap;
 
     .b-blog-post-card-tag {
